[package]
name = "tmux-hints"
description = "An application to find matches, ie. urls and navigate them with the keyboard."
readme = "README.md"
keywords = ["tmux"]
edition = "2018"
categories = ["command-line-utilities"]
repository = "https://github.com/Roger/tmux-hints"
version = "0.1.1"
authors = ["roger <rogerduran@gmail.com>"]
license = "MIT"

[badges]
travis-ci = { repository = "Roger/tmux-hints", branch = "master" }

[dependencies]
libc = "0.2.58"
dirs = "2.0.2"
regex = "1.1.7"
termios= "0.3.1"
serde = { version = "1.0.93", features = ["derive"] }
toml = "0.5.3"
once_cell = "0.2.1"
clap = "2.33.0"
unicode-width = "0.1.5"
