[package]
name = "tmux-hints"
description = "An application to find matches, ie. urls and navigate them with the keyboard."
readme = "README.md"
keywords = ["tmux"]
edition = "2018"
categories = ["command-line-utilities"]
repository = "https://github.com/Roger/tmux-hints"
version = "0.1.1"
authors = ["roger <rogerduran@gmail.com>"]
license = "MIT"

[badges]
travis-ci = { repository = "Roger/tmux-hints", branch = "master" }

[dependencies]
libc = "0.2"
dirs = "3.0"
regex = "1.4"
termios= "0.3"
serde = { version = "1.0", features = ["derive"] }
toml = "0.5"
once_cell = "1.4"
clap = "2.33"
unicode-width = "0.1"
